[packaging] make it boostable

--- a/glacier-music.desktop
+++ b/glacier-music.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
 Name=Music
-Exec=glacier-music
+Exec=invoker --type=nemomobile -s glacier-music
 Icon=/usr/share/glacier-music/images/icon-app-music.png
 X-Desktop-File-Install-Version=0.20
