--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,8 @@ set(SRC
 	main.cpp
 	musicbrainzconnect.cpp
 	musicbrainzconnect.h
+        peakscreator.cpp
+        peakscreator.h
 	rescancollection.cpp
 	rescancollection.h
 	track.cpp
