--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include(FeatureSummary)
 include(GNUInstallDirs)
 
 set(QT_MIN_VERSION "5.6.0")
-find_package(Qt5 COMPONENTS Qml Quick Multimedia Sql REQUIRED)
+find_package(Qt5 COMPONENTS Qml Quick Multimedia Sql LinguistTools REQUIRED)
 find_package(Glacier COMPONENTS App REQUIRED)
 find_package(PkgConfig REQUIRED)
 
@@ -35,3 +35,12 @@ install(FILES glacier-music.desktop
 	DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/applications)
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
+
+# Translations
+file(GLOB TS_FILES translations/*.ts)
+qt5_add_translation(QM_FILES ${TS_FILES})
+add_custom_target(translations DEPENDS ${QM_FILES})
+add_dependencies(glacier-music translations)
+
+install(FILES ${QM_FILES}
+        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/glacier-music/translations)
