--- a/glacier-music.desktop
+++ b/glacier-music.desktop
@@ -5,3 +5,4 @@ Exec=invoker --type=nemomobile -s glacier-music
 Icon=/usr/share/glacier-music/images/icon-app-music.png
 X-Desktop-File-Install-Version=0.20
 Name[cs]=Hudba
+Name[ru]=Музыка
