translate desktop file

--- a/glacier-music.desktop
+++ b/glacier-music.desktop
@@ -6,3 +6,7 @@ Icon=/usr/share/glacier-music/images/icon-app-music.png
 X-Desktop-File-Install-Version=0.20
 Name[cs]=Hudba
 Name[ru]=Музыка
+Name[pl]=Muzyka
+Name[fi]=Musiikki
+Name[de]=Musik
+Name[uk]=Музика
