--- a/glacier-music.desktop
+++ b/glacier-music.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Music
-Exec=invoker --type=nemomobile -s glacier-music
+Exec=glacier-music
 Icon=/usr/share/glacier-music/images/icon-app-music.png
 X-Desktop-File-Install-Version=0.20
 Name[cs]=Hudba
