--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,10 @@ include(FindPkgConfig)
 include(FeatureSummary)
 include(GNUInstallDirs)
 
-set(QT_MIN_VERSION "5.6.0")
+set(QT_MIN_VERSION "5.11.0")
 find_package(Qt5 COMPONENTS Qml Quick Multimedia Sql LinguistTools REQUIRED)
-find_package(Glacier COMPONENTS App REQUIRED)
+find_package(Glacier 0.8 COMPONENTS App REQUIRED)
+find_package(Qt5QuickCompiler)
 find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(TAGLIB taglib REQUIRED IMPORTED_TARGET)
