Separate to lib plugin and app

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,43 +1,30 @@
 set(SRC
-	artist.cpp
-	artist.h
-	audiofile.cpp
-	audiofile.h
 	collection.cpp
 	collection.h
 	cover.cpp
 	cover.h
-	dbadapter.cpp
-	dbadapter.h
 	downloader.cpp
 	downloader.h
-	item.h
 	main.cpp
 	musicbrainzconnect.cpp
 	musicbrainzconnect.h
 	rescancollection.cpp
-	rescancollection.h
-	track.cpp
-	track.h
-	models/artistsqlmodel.cpp
-	models/artistsqlmodel.h
-	models/playlistmodel.cpp
-	models/playlistmodel.h
-	models/tracksqlmodel.cpp
-        models/tracksqlmodel.h)
+	rescancollection.h)
 
 qtquick_compiler_add_resources(RESOURCES qml/glacier-music.qrc)
 
-add_executable(glacier-music ${SRC} ${RESOURCES})
+add_subdirectory(lib)
 add_subdirectory(plugin)
+include_directories("lib")
+add_executable(glacier-music ${SRC} ${RESOURCES})
 
 target_link_libraries(glacier-music
 	Qt5::Qml
 	Qt5::Quick
 	Qt5::Multimedia
-	Qt5::Sql
         Qt5::DBus
 	Glacier::App
+        Glacier::Music
         PkgConfig::TAGLIB
         PkgConfig::NEMONOTIFICATIONS)
 install(TARGETS glacier-music RUNTIME
