Make API db independend

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,17 +1,14 @@
 set(SRC artist.cpp
     audiofile.cpp
-    dbadapter.cpp
     sourcepluginmanager.cpp
     sourcepluginhost.cpp
     track.cpp)
 
-set(HEADERS item.h
-    sourcepluginmanager.h
+set(HEADERS sourcepluginmanager.h
     sourcepluginhost.h)
 
 set(PUBLIC_HEADERS artist.h
     audiofile.h
-    dbadapter.h
     musicsourceplugin.h
     track.h)
 
@@ -20,8 +17,7 @@ add_library(Glacier::Music ALIAS glaciermusic)
 
 target_link_libraries(glaciermusic
     Qt5::Core
-    Qt5::Gui
-    Qt5::Sql)
+    Qt5::Gui)
 
 install(TARGETS glaciermusic
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/)
