Make some orger

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,32 +1,22 @@
 set(SRC
-    cover.cpp
-    cover.h
-    downloader.cpp
-    downloader.h
-        glaciermusicplayer.cpp
-        glaciermusicplayer.h
-    main.cpp
-    musicbrainzconnect.cpp
-    musicbrainzconnect.h)
+    glaciermusicplayer.cpp
+    glaciermusicplayer.h
+    main.cpp)
 
 qtquick_compiler_add_resources(RESOURCES qml/glacier-music.qrc)
 
 add_subdirectory(lib)
-add_subdirectory(plugin)
-add_subdirectory(sources)
+add_subdirectory(qml/plugin)
+add_subdirectory(plugins)
 
 include_directories("lib")
 
 add_executable(glacier-music ${SRC} ${RESOURCES})
 
 target_link_libraries(glacier-music
-    Qt5::Qml
-    Qt5::Quick
     Qt5::Multimedia
-        Qt5::DBus
     Glacier::App
-        Glacier::Music
-        PkgConfig::TAGLIB
-        PkgConfig::NEMONOTIFICATIONS)
+    Glacier::Music)
+
 install(TARGETS glacier-music RUNTIME
     DESTINATION ${CMAKE_INSTALL_BINDIR})
