--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SRC artist.cpp
     audiofile.cpp
+    downloader.cpp
     sourcepluginmanager.cpp
     sourcepluginhost.cpp
     track.cpp)
@@ -9,6 +10,7 @@ set(HEADERS sourcepluginmanager.h
 
 set(PUBLIC_HEADERS artist.h
     audiofile.h
+    downloader.h
     musicsourceplugin.h
     track.h)
 
@@ -17,7 +19,9 @@ add_library(Glacier::Music ALIAS glaciermusic)
 
 target_link_libraries(glaciermusic
     Qt5::Core
-    Qt5::Gui)
+    Qt5::Network
+    Qt5::Gui
+    PkgConfig::TAGLIB)
 
 install(TARGETS glaciermusic
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/)
