--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,2 +1,4 @@
+add_subdirectory(fromdirectorycover)
+add_subdirectory(fromtagscover)
 add_subdirectory(localsource)
 add_subdirectory(musicbrainzcover)
