--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SRC
 	rescancollection.cpp
 	rescancollection.h)
 
-qtquick_compiler_add_resources(RESOURCES qml/glacier-music.qrc)
+qt_add_resources(RESOURCES qml/glacier-music.qrc)
 
 add_subdirectory(lib)
 add_subdirectory(plugin)
@@ -19,10 +19,10 @@ include_directories("lib")
 add_executable(glacier-music ${SRC} ${RESOURCES})
 
 target_link_libraries(glacier-music
-	Qt5::Qml
-	Qt5::Quick
-	Qt5::Multimedia
-        Qt5::DBus
+	Qt6::Qml
+	Qt6::Quick
+	Qt6::Multimedia
+        Qt6::DBus
 	Glacier::App
         Glacier::Music
         PkgConfig::TAGLIB
