--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ set(SRC
     glaciermusicplayer.h
     main.cpp)
 
-qtquick_compiler_add_resources(RESOURCES qml/glacier-music.qrc)
+qt_add_resources(RESOURCES qml/glacier-music.qrc)
 
 add_subdirectory(lib)
 add_subdirectory(qml/plugin)
@@ -14,7 +14,7 @@ include_directories("lib")
 add_executable(glacier-music ${SRC} ${RESOURCES})
 
 target_link_libraries(glacier-music
-    Qt5::Multimedia
+    Qt6::Multimedia
     Glacier::App
     Glacier::Music)
 
